docs/3.10.2/genai/prompt-registry/create-and-edit-prompts.md
# Create and Edit Prompts

This guide walks you through the process of creating new prompts and managing their versions within the MLflow Prompt Registry.

## Creating a New Prompt[​](#creating-a-new-prompt "Direct link to Creating a New Prompt")

You can initiate a new prompt in the MLflow Prompt Registry in two primary ways: through the MLflow UI or programmatically using the Python SDK.

* UI
* Python

1. Navigate to the Prompt Registry section in your MLflow instance.

2. Click on the "Create Prompt" (or similar) button.

3. Fill in the prompt details such as name, prompt template text, and commit message (optional).

4. Optionally, expand **Advanced settings** to configure additional settings:

   <!-- -->

   * **Structured output (JSON schema)** — a JSON object that defines the expected response format for the prompt. The schema is stored with the prompt version and shown on the version detail page. See [Structured Output](https://mlflow.org/docs/latest/genai/prompt-registry/structured-output/) for details and examples.
   * **Model configuration** — set model parameters such as the model name, temperature, and other inference settings to associate with this prompt version. See [Model Configuration](https://mlflow.org/docs/latest/genai/prompt-registry/#model-configuration) for details and examples.

![Registered Prompt in UI](/docs/3.10.2/assets/images/registered-prompt-d457d27524f55e7575e9a129e53487e4.png)

To create a new prompt programmatically, use the [`mlflow.genai.register_prompt()`](/docs/3.10.2/api_reference/python_api/mlflow.genai.html#mlflow.genai.register_prompt) function. This is particularly useful for automating prompt creation or managing prompts as part of a larger script.

python

```
import mlflow

# Use double curly braces for variables in the template
initial_template = """\
Summarize content you are provided with in {{ num_sentences }} sentences.

Sentences: {{ sentences }}
"""

# Chat Style template
initial_template = [
    {
        "role": "system",
        "content": "Summarize content you are provided with in {{ num_sentences }} sentences.",
    },
    {"role": "user", "content": "Sentences: {{ sentences }}"},
]

# Optional Response Format
from pydantic import BaseModel, Field


class ResponseFormat(BaseModel):
    summary: str = Field(..., description="Summary of the content")


# Register a new prompt
prompt = mlflow.genai.register_prompt(
    name="summarization-prompt",
    template=initial_template,
    # Optional: Provide Response Format to get structured output
    response_format=ResponseFormat,
    # Optional: Provide a commit message to describe the changes
    commit_message="Initial commit",
    # Optional: Set tags applies to the prompt (across versions)
    tags={
        "author": "author@example.com",
        "task": "summarization",
        "language": "en",
    },
)

# The prompt object contains information about the registered prompt
print(f"Created prompt '{prompt.name}' (version {prompt.version})")
```

## Editing an Existing Prompt (Creating New Versions)[​](#editing-an-existing-prompt-creating-new-versions "Direct link to Editing an Existing Prompt (Creating New Versions)")

Once a prompt version is created, its template and initial metadata are **immutable**. Editing an existing prompt means creating a *new version* of that prompt with your changes. This Git-like behavior ensures a complete history and allows you to revert to previous versions if needed.

* UI
* Python

1. Navigate to the specific prompt you wish to edit in the Prompt Registry.
2. Select the version you want to base your new version on (often the latest).
3. Look for an "Edit Prompt" or "Create New Version" button.
4. Modify the template, update metadata, or change tags as needed.
5. Provide a new **Commit Message** describing the changes you made for this new version.

![Update Prompt UI](/docs/3.10.2/assets/images/update-prompt-ui-9fe89b08b9318729754441fbe67f0a90.png)

To create a new version of an existing prompt, you again use the [`mlflow.genai.register_prompt()`](/docs/3.10.2/api_reference/python_api/mlflow.genai.html#mlflow.genai.register_prompt) function, but this time, you provide the `name` of an existing prompt. MLflow will automatically increment the version number.

python

```
import mlflow

new_template = """\
You are an expert summarizer. Condense the following content into exactly {{ num_sentences }} clear and informative sentences that capture the key points.

Sentences: {{ sentences }}

Your summary should:
- Contain exactly {{ num_sentences }} sentences
- Include only the most important information
- Be written in a neutral, objective tone
- Maintain the same level of formality as the original text
"""

# Register a new version of an existing prompt
updated_prompt = mlflow.genai.register_prompt(
    name="summarization-prompt",  # Specify the existing prompt name
    template=new_template,
    commit_message="Improvement",
    tags={
        "author": "author@example.com",
    },
)
```

## Understanding Immutability[​](#understanding-immutability "Direct link to Understanding Immutability")

It's crucial to remember that prompt versions in the MLflow Prompt Registry are immutable. Once `mlflow.genai.register_prompt()` is called and a version is created (or a new version of an existing prompt is made), the template, initial commit message, and initial metadata for *that specific version* cannot be altered. This design choice provides strong guarantees for reproducibility and lineage tracking.

If you need to change a prompt, you always create a new version.

## Comparing Prompt Versions[​](#comparing-prompt-versions "Direct link to Comparing Prompt Versions")

The MLflow UI provides tools to compare different versions of a prompt. This typically includes a side-by-side diff view, allowing you to easily see what changed in the template text, metadata, or tags between versions.

![Compare Prompt Versions](/docs/3.10.2/assets/images/compare-prompt-versions-cfb444eca59dc0c2e14b98d480aa2c17.png)
